* Applied patch by Idefix that fixes bug #4730 by removing the iterate over   directory functionality without Tracker.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@34103 a95241bf-73f2-0310-859d-f6bbb57e9c96